<resources>
    <string name="app_name">Cognitium</string>
    <string name="settings">Settings</string>

    <string name="create_account">Create a New Account</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="phone_number">Phone #:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm:</string>
    <string name="accept">Accept</string>
    <string name="caretaker_email">Caretaker Email:</string>
    <string name="login">Log In</string>
    <string name="tasks">Tasks</string>
    <string name="home">Home</string>
    <string name="people">People</string>
    <string name="calendar">Calendar</string>
    <string name="placeholder">Lorem ipsum</string>
    <string name="choose_header">Choose User Type:</string>
    <string name="caretaker">Caretaker</string>
    <string name="patient">Patient</string>
    <string name="welcome">Welcome!</string>
    <string name="edit">Edit</string>
    <string name="add_a_person">Add A Person</string>
    <string name="add_task">Add Task</string>
    <string name="task_name">Task Name:</string>
    <string name="task_date">Task Date:</string>
    <string name="task_description">Task Description:</string>
    <string name="tasks_message">Use the tasks tab to look at your tasks for the day,
                                or to set new tasks for your self.</string>
    <string name="people_message">Use the people tab to look at important people, or to add new contacts.</string>
    <string name="calendar_message">Use the calendar tab to check out what the next few days look like.</string>

</resources>
