<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity"
    android:id="@+id/grandparent"
    android:background="@color/dark_gray">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableRow
            style="@style/SignUpTableview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|top" >

            <TextView
                style="@style/SignUpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/choose_header"
                android:id="@+id/textView11" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/caretaker"
                android:id="@+id/chooseButtonCare"
                style="@style/Buttons"
                android:onClick="caretakerButtonClicked"
                android:nestedScrollingEnabled="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/patient"
                android:id="@+id/chooseButtonPat"
                style="@style/Buttons"
                android:onClick="patientButtonClicked" />
        </TableRow>
    </LinearLayout>
</RelativeLayout>