<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/grandparent"
    android:background="@color/dark_gray">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/SignUpTableview">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/login"
                android:id="@+id/textView8"
                style="@style/SignUpTextView"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SignUpTableview">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/email"
                android:id="@+id/textView9"
                style="@style/SignUpTextView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/loginEmailEt"
                style="@style/SignUpTextView"
                android:maxWidth="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SignUpTableview">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/password"
                android:id="@+id/textView10"
                style="@style/SignUpTextView" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/loginPasswordEt"
                style="@style/SignUpTextView" />
        </TableRow>


        <Space
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_gravity="center_horizontal" />

        <Button
                style="@style/Buttons"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/button"
                android:layout_alignParentTop="false"
                android:layout_centerInParent="true"
                android:layout_above="@id/loginSignupB"
                android:onClick="loginButtonClicked" />




        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:id="@+id/loginSignupB"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                style="@style/Buttons"
                android:onClick="createButtonClicked" />


    </LinearLayout>


</RelativeLayout>